@@ -7,4 +7,7 @@ END_TAG = '}}'
 
 [BINDS]
 template.startup_installed = 'startup_installed', 'uliweb.contrib.template.startup_installed'
+template.prepare_view_env = 'prepare_view_env', 'uliweb.contrib.template.prepare_view_env'
 
+[APP_LAYOUTS]
+__default__ = 'layout.html'
