@@ -24,6 +24,14 @@ Uliweb Change Log
    with current filename, then it'll find the parent same named filename. This
    way can make new same named filename but extended from parent. Also support 
    include tag.
+#. Add APP_LAYOUT support in uliweb.contrib.template, so in your template you can
+   use: `{{use layout_template}}` in your tmplate, and config the app layout template
+   as: 
+    
+        [APP_LAYOUTS]
+        appname = 'layout.html'
+        
+   so when render the template, the `layout_template` will be replaced with `layout.html`
 
 0.1.3 Version
 -----------------
